--- a/HTML-Essentials/index.html
+++ b/HTML-Essentials/index.html
@@ -1,6 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        <p>Hello World</p>
-    </body>
+
+<head>
+    <title>Learning Html</title>
+</head>
+
+<body>
+    <!-- Heading Tags -->
+    <h1>Games</h1>
+
+    <h2>Defining a game:</h2>
+
+    <!-- Paragraph Tags -->
+    <p>
+        A game is <b>a structured form of play</b>, usually undertaken
+        for entertainment or fun, and sometimes used as an educational
+        tool
+        <br>
+        Games are different from work, which is usually carried
+        out for remuneration, and from art, which is more often an
+        expression of aesthetic or ideological elements.
+    </p>
+
+    <h3>Roger Caillois</h3>
+
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas nostrum accusantium nesciunt. Molestias vel,
+        dicta esse qui velit alias nobis est cumque ea asperiores tenetur obcaecati vero voluptates dolores error.
+        Enim iste sed ad nesciunt omnis, aliquam quidem eveniet sunt itaque porro impedit modi maiores consequatur quam
+        dolores incidunt expedita unde eum culpa perspiciatis similique placeat officia soluta eaque? Mollitia.
+        Dolorem sint ratione nostrum atque vel perspiciatis in similique voluptatibus nisi quia omnis officiis
+        repellendus sed excepturi itaque molestias laborum veniam ad adipisci accusantium nesciunt harum numquam,
+        repudiandae possimus. Voluptatem?
+        Voluptas explicabo commodi ipsa nisi impedit nemo repellat maiores vero tempore sit, dolore quisquam, iste nobis
+        dolorem delectus asperiores quia alias quidem dicta rem quasi voluptatum. Ipsa ad ea dolore.
+        Aliquid, adipisci consequuntur deserunt, quisquam hic nisi inventore quaerat voluptatum enim facilis veniam
+        ratione aspernatur reiciendis ipsam est ipsum. Fuga voluptates tenetur vitae labore ratione quos, odit dicta
+        culpa rerum.
+    </p>
+
+    <h3>Behavior</h3>
+
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas nostrum accusantium nesciunt. Molestias vel,
+        dicta esse qui velit alias nobis est cumque ea asperiores tenetur obcaecati vero voluptates dolores error.
+        Enim iste sed ad nesciunt omnis, aliquam quidem eveniet sunt itaque porro impedit modi maiores consequatur quam
+        dolores incidunt expedita unde eum culpa perspiciatis similique placeat officia soluta eaque? Mollitia.
+        Dolorem sint ratione nostrum atque vel perspiciatis in similique voluptatibus nisi quia omnis officiis
+        repellendus sed excepturi itaque molestias laborum veniam ad adipisci accusantium nesciunt harum numquam,
+        repudiandae possimus. Voluptatem?
+        Voluptas explicabo commodi ipsa nisi impedit nemo repellat maiores vero tempore sit, dolore quisquam, iste nobis
+        dolorem delectus asperiores quia alias quidem dicta rem quasi voluptatum. Ipsa ad ea dolore.
+        Aliquid, adipisci consequuntur deserunt, quisquam hic nisi inventore quaerat voluptatum enim facilis veniam
+        ratione aspernatur reiciendis ipsam est ipsum. Fuga voluptates tenetur vitae labore ratione quos, odit dicta
+        culpa rerum.
+    </p>
+
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
+
+    <!-- Exercise 1
+        <h1>Pangolin</h1>
+
+        <h2>Intro</h2>
+
+        <p>
+            Pangolins, sometimes known as scaly anteaters, are mammals of the order Pholidota (from Ancient Greek φολῐ́ς, "horny scale"). The one extant family, Manidae, has three genera: Manis, Phataginus and Smutsia. Manis comprises the four species found in Asia, while Phataginus and Smutsia include two species each, all found in Sub-Saharan Africa. These species range in size from 30 to 100 cm (12 to 39 in). A number of extinct pangolin species are also known.
+        </p>
+        <h2>Description</h2>
+
+        <p>
+            Pangolins have large, protective keratin scales covering their skin; they are the only known mammals with this feature. They live in hollow trees or burrows, depending on the species. Pangolins are nocturnal, and their diet consists of mainly ants and termites, which they capture using their long tongues. They tend to be solitary animals, meeting only to mate and produce a litter of one to three offspring, which they raise for about two years.
+        </p>
+        <h2>Poaching</h2>
+
+        <p>Pangolins are threatened by poaching (for their meat and scales, which are used in Chinese traditional medicine) and heavy deforestation of their natural habitats, and are the most trafficked mammals in the world.As of January 2020, of the eight species of pangolin, three (Manis culionensis, M. pentadactyla and M. javanica) are listed as critically endangered, three (Phataginus tricuspis, Manis crassicaudata and Smutsia gigantea) are listed as endangered and two (Phataginus tetradactyla and Smutsia temminckii) are listed as vulnerable on the Red List of Threatened Species of the International Union for Conservation of Nature.</p> -->
+
+</body>
+
 </html>
