Added new ordered and unordered lists. Also added links using anchor tags

--- a/HTML-Essentials/index.html
+++ b/HTML-Essentials/index.html
@@ -9,8 +9,9 @@
     <!-- Heading Tags -->
     <h1>Games</h1>
 
+    <a href="https://en.wikipedia.org/wiki/Game">Learn more about Games</a>
+    <a href="about.html">About Page</a>
     <h2>Defining a game:</h2>
-
     <!-- Paragraph Tags -->
     <p>
         A game is <b>a structured form of play</b>, usually undertaken
@@ -23,7 +24,6 @@
     </p>
 
     <h3>Roger Caillois</h3>
-
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas nostrum accusantium nesciunt. Molestias vel,
         dicta esse qui velit alias nobis est cumque ea asperiores tenetur obcaecati vero voluptates dolores error.
@@ -39,8 +39,7 @@
         culpa rerum.
     </p>
 
-    <h3>Behavior</h3>
-
+    <h4>Behavior</h4>
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas nostrum accusantium nesciunt. Molestias vel,
         dicta esse qui velit alias nobis est cumque ea asperiores tenetur obcaecati vero voluptates dolores error.
@@ -64,21 +63,72 @@
     <h6>Header 6</h6>
 
     <!-- Exercise 1
-        <h1>Pangolin</h1>
+            <h1>Pangolin</h1>
 
-        <h2>Intro</h2>
+            <h2>Intro</h2>
 
-        <p>
-            Pangolins, sometimes known as scaly anteaters, are mammals of the order Pholidota (from Ancient Greek φολῐ́ς, "horny scale"). The one extant family, Manidae, has three genera: Manis, Phataginus and Smutsia. Manis comprises the four species found in Asia, while Phataginus and Smutsia include two species each, all found in Sub-Saharan Africa. These species range in size from 30 to 100 cm (12 to 39 in). A number of extinct pangolin species are also known.
-        </p>
-        <h2>Description</h2>
+            <p>
+                Pangolins, sometimes known as scaly anteaters, are mammals of the order Pholidota (from Ancient Greek φολῐ́ς, "horny scale"). The one extant family, Manidae, has three genera: Manis, Phataginus and Smutsia. Manis comprises the four species found in Asia, while Phataginus and Smutsia include two species each, all found in Sub-Saharan Africa. These species range in size from 30 to 100 cm (12 to 39 in). A number of extinct pangolin species are also known.
+            </p>
+            <h2>Description</h2>
 
-        <p>
-            Pangolins have large, protective keratin scales covering their skin; they are the only known mammals with this feature. They live in hollow trees or burrows, depending on the species. Pangolins are nocturnal, and their diet consists of mainly ants and termites, which they capture using their long tongues. They tend to be solitary animals, meeting only to mate and produce a litter of one to three offspring, which they raise for about two years.
-        </p>
-        <h2>Poaching</h2>
+            <p>
+                Pangolins have large, protective keratin scales covering their skin; they are the only known mammals with this feature. They live in hollow trees or burrows, depending on the species. Pangolins are nocturnal, and their diet consists of mainly ants and termites, which they capture using their long tongues. They tend to be solitary animals, meeting only to mate and produce a litter of one to three offspring, which they raise for about two years.
+            </p>
+            <h2>Poaching</h2>
 
-        <p>Pangolins are threatened by poaching (for their meat and scales, which are used in Chinese traditional medicine) and heavy deforestation of their natural habitats, and are the most trafficked mammals in the world.As of January 2020, of the eight species of pangolin, three (Manis culionensis, M. pentadactyla and M. javanica) are listed as critically endangered, three (Phataginus tricuspis, Manis crassicaudata and Smutsia gigantea) are listed as endangered and two (Phataginus tetradactyla and Smutsia temminckii) are listed as vulnerable on the Red List of Threatened Species of the International Union for Conservation of Nature.</p> -->
+            <p>Pangolins are threatened by poaching (for their meat and scales, which are used in Chinese traditional medicine) and heavy deforestation of their natural habitats, and are the most trafficked mammals in the world.As of January 2020, of the eight species of pangolin, three (Manis culionensis, M. pentadactyla and M. javanica) are listed as critically endangered, three (Phataginus tricuspis, Manis crassicaudata and Smutsia gigantea) are listed as endangered and two (Phataginus tetradactyla and Smutsia temminckii) are listed as vulnerable on the Red List of Threatened Species of the International Union for Conservation of Nature.</p> -->
+    <br>
+
+    <!-- Creating ordered and unordered Lists. Also,
+        learning how to nest lists. -->
+    <h2>Creating an Unordered list</h2>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <hr>
+    <h2>Creating an Ordered list</h2>
+    <ol>
+        <li>Item 1
+            <ul>
+                <li>Item 1a</li>
+                <li>Item 1b</li>
+            </ul>
+        </li>
+        <li>Item 2
+            <ul>
+                <li>Item 2a</li>
+                <li>Item 2b
+                    <ul>
+                        <li>Item 2aa</li>
+                        <li>Item 2bb</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>Item 3</li>
+    </ol>
+
+    <!-- Exercise 2 (Favorite Movies Challenge)
+    <h1>Movies</h1>
+    <h2>My Top 3 Movies:</h2>
+
+    <ol>
+        <li>Amadeus</li>
+        <li>Stand By Me</li>
+        <li>Amelie</li>
+    </ol>
+
+
+    <h2>Other Good Movies:</h2>
+
+    <ul>
+        <li>Alien</li>
+        <li>Parasite</li>
+        <li>Annie Hall</li>
+    </ul> -->
 
 </body>
 
