--- a/HTML-Essentials/about.html
+++ b/HTML-Essentials/about.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Welcome to the About Page</h1>
     <a href="index.html">Go back to home.</a>
+
+    <h2>Adding an Image</h2>
+    <img src="https://i.guim.co.uk/img/media/c6f7b43fa821d06fe1ab4311e558686529931492/168_84_1060_636/master/1060.jpg?width=465&quality=45&auto=format&fit=max&dpr=2&s=7f0718a8a5451b88475559f0819a35cd" alt="Minecraft Image">
 </body>
 </html>
