--- a/HTML-Essentials/index.html
+++ b/HTML-Essentials/index.html
@@ -10,7 +10,9 @@
     <h1>Games</h1>
 
     <a href="https://en.wikipedia.org/wiki/Game">Learn more about Games</a>
+    <br>
     <a href="about.html">About Page</a>
+    <br>
     <h2>Defining a game:</h2>
     <!-- Paragraph Tags -->
     <p>
@@ -24,6 +26,7 @@
     </p>
 
     <h3>Roger Caillois</h3>
+    <img src="https://images.findagrave.com/photos250/photos/2006/124/7367_114688858341.jpg" alt="Roger Caillois">
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas nostrum accusantium nesciunt. Molestias vel,
         dicta esse qui velit alias nobis est cumque ea asperiores tenetur obcaecati vero voluptates dolores error.
@@ -130,6 +133,12 @@
         <li>Annie Hall</li>
     </ul> -->
 
+    <!-- Exercise 3 -->
+    <!-- A blank page...Don't worry you got this! -->
+    link: https://en.wikipedia.org/wiki/Wolf
+    <!-- <a href="https://en.wikipedia.org/wiki/Wolf">Go To Wikipedia</a> -->
+    image: https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg
+    <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg" alt="Wolf with tongue out"> -->
 </body>
 
 </html>
